# autocommit

./: .env.example  .gitignore  CLAUDE.md  Cargo.toml  Justfile  README.md  autocommit.ts  autopr.ts  biome.json  package.json
.github/workflows/: ci.yml
crates/autocommit/: Cargo.toml
crates/autocommit-core/: Cargo.toml
crates/autocommit-core/src/: anthropic.rs  config.rs  errors.rs  git.rs  lib.rs  utils.rs
crates/autocommit/src/: main.rs
crates/autopr/: Cargo.toml
crates/autopr/src/: main.rs
lib/: config.test.ts  config.ts  errors.test.ts  errors.ts  git.ts
scripts/: install-hooks.sh  pre-commit  pre-push
