[workspace]
members = [
    "crates/autocommit-core",
    "crates/autocommit",
    "crates/autopr",
]
resolver = "2"

[workspace.dependencies]
clap = { version = "4.5", features = ["derive"] }
tokio = { version = "1.40", features = ["full"] }
reqwest = { version = "0.12", features = ["json", "rustls-tls"], default-features = false }
serde = { version = "1.0", features = ["derive"] }
serde_json = "1.0"
thiserror = "2.0"
anyhow = "1.0"
dialoguer = "0.11"
dotenvy = "0.15"
regex = "1.11"

[profile.release]
strip = true           # Strip symbols
lto = true            # Link-time optimization
codegen-units = 1     # Better optimization
opt-level = 3         # Maximum optimization
panic = 'abort'       # Smaller binary
