[package]
name = "autopr"
version = "0.1.0"
edition = "2021"

[[bin]]
name = "autopr"
path = "src/main.rs"

[dependencies]
autocommit-core = { path = "../autocommit-core" }
clap = { workspace = true }
tokio = { workspace = true }
anyhow = { workspace = true }
dotenvy = { workspace = true }
dialoguer = { workspace = true }

[dev-dependencies]
assert_cmd = "2.0"
predicates = "3.1"
tempfile = "3.12"
